copy fix for GQA and FA2, thanks emozilla

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -8,7 +8,10 @@ ignore_missing_imports = True
 [mypy-axolotl.monkeypatch.*]
 ignore_errors = True
 
-[mypy-flash_attn.*]
+[mypy-axolotl.flash_attn]
+ignore_errors = True
+
+[mypy-flash_attn]
 ignore_missing_imports = True
 
 [mypy-huggingface_hub]
